--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <header class="d-flex justify-content-center">
           <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a href="index.html" class="logo-container"><img src="img/Logo.svg" alt="Logo" class="logo"></a>
+              <a href="index.html" class="logo-container"><img src="img/Logo4.svg" alt="Logo" class="logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#globalNavbar" aria-controls="globalNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
