carousel buttons are added and metadata added

--- a/index.html
+++ b/index.html
@@ -15,30 +15,28 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <meta name="robots" content="index, nofollow" />
-        <link rel="canonical" href="" />
+        <link rel="canonical" href="https://adventure.yuxi-peng.com" />
         <meta name="copyright" content="YuXi Peng" />
         <meta name="author" content="YuXi Peng" />
-        <title></title>
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <title>Adventure Flights</title>
+        <meta name="description" content="We offer cheap flights and hotel bookings.">
+        <meta name="keywords" content="flights, hotels, book flights, book hotels, car rentals">
         <meta property="og:locale" content="en_CA" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="" />
-        <meta property="og:description" content="" />
-        <meta property="og:site_name" content="" />
-        <meta property="og:url" content="" />
-        <meta property="og:image" name="image" content="" />
-        <meta property="og:image:width" content="" />
-        <meta property="og:image:height" content="" />
-        <meta name="twitter:title" content="">
-        <meta name="twitter:image" content="">
+        <meta property="og:title" content="Adventure Flights" />
+        <meta property="og:description" content="We offer cheap flights and hotel bookings." />
+        <meta property="og:site_name" content="Adventure Flights" />
+        <meta property="og:url" content="https://adventure.yuxi-peng.com" />
+        <meta property="og:image" name="image" content="img/Logo.svg" />
+        <meta name="twitter:title" content="Adventure Flights">
+        <meta name="twitter:image" content="img/Logo.svg">
         <meta name="twitter:card" content="website">
-        <meta name="twitter:url" content="">
-        <meta name="twitter:description" content="">
+        <meta name="twitter:url" content="https://adventure.yuxi-peng.com">
+        <meta name="twitter:description" content="We offer cheap flights and hotel bookings.">
         <meta name="msapplication-TileColor" content="#009AD8">
-        <meta name="msapplication-TileImage" content="">
-        <link rel="apple-touch-icon-precomposed" href="">
-        <link rel="icon" href="" type="image/svg">
+        <meta name="msapplication-TileImage" content="img/Logo.svg">
+        <link rel="apple-touch-icon-precomposed" href="img/Logo.svg">
+        <link rel="icon" href="img/Logo.svg" type="image/svg">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/flag-icons.css">
         <link rel="stylesheet" type="text/css" href="css/reset.css">
