--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/main.min.css">
     </head>
     <body>
         <header class="d-flex justify-content-center">
@@ -469,7 +469,7 @@
         <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
         <script src="js/flickity.pkgd.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/main.min.js"></script>
         <!-- JSON LTD -->
         <script></script>
     </body>
