--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <meta name="robots" content="index, nofollow" />
+        <meta name="robots" content="noindex, nofollow" />
         <link rel="canonical" href="https://adventure.yuxi-peng.com" />
         <meta name="copyright" content="YuXi Peng" />
         <meta name="author" content="YuXi Peng" />
